--- a/modules/backend/layouts/default.htm
+++ b/modules/backend/layouts/default.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="<?= App::getLocale() ?>" class="no-js <?= $this->makeLayoutPartial('browser_detector') ?>">
+<html lang="<?= App::getLocale() ?>" class="no-js <?= $this->makeLayoutPartial('browser_detector') ?>" dir="rtl">
     <head>
         <?= $this->makeLayoutPartial('head') ?>
     </head>
