--- a/themes/demo/assets/css/gaia.css
+++ b/themes/demo/assets/css/gaia.css
@@ -54,7 +54,7 @@ h6,
 .content-blog p {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif; }
+  font-family: 'Assistant', sans-serif; }
 
 h1 a,
 .h1 a,
@@ -70,7 +70,7 @@ h6 a,
 .h6 a,
 .content-blog p a {
   font-size: inherit;
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif; }
+  font-family: 'Assistant', sans-serif; }
 
 .content-blog {
   padding: 30px 0; }
@@ -1756,7 +1756,7 @@ input::-webkit-input-placeholder {
 
 .card {
   background: #fff;
-  box-shadow: 0 32px 44px -24px rgba(0, 0, 0, 0.23), 0 20px 25px 0px rgba(0, 0, 0, 0.12), 0 15px 10px -10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px -2px 23px -1px rgba(0, 0, 0, 0.23), 0 0px 1px 0px rgba(0, 0, 0, 0.12), 0 0px 40px -40px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   margin-bottom: 30px;
   -webkit-transition: all 370ms cubic-bezier(0.34, 1.61, 0.7, 1);
@@ -1770,7 +1770,6 @@ input::-webkit-input-placeholder {
   z-index: 3; }
 
 .card-client {
-  box-shadow: 0 32px 44px -24px rgba(0, 0, 0, 0.23), 0 -6px 25px 0px rgba(0, 0, 0, 0.12), 0 0px 7px -17px rgba(0, 0, 0, 0.2);
   background: #fff;
   border-radius: 2px !important;
   margin-bottom: 30px;
@@ -1785,8 +1784,7 @@ input::-webkit-input-placeholder {
   -moz-transform: scale(1.03);
   -o-transform: scale(1.03);
   -ms-transform: scale(1.03);
-  transform: scale(1.03);
-  box-shadow: 0 26px 50px -10px rgba(0, 0, 0, 0.38), 0 10px 20px 0px rgba(0, 0, 0, 0.2), 0 15px 10px -10px rgba(0, 0, 0, 0.2); }
+  transform: scale(1.03); }
 
 .card .subtitle-black {
   color: #141414; }
@@ -3163,34 +3161,6 @@ body {
   #bodyClick {
     right: 230px; }
 
-  .navbar-collapse {
-    position: fixed;
-    display: block;
-    top: 0;
-    height: 100vh;
-    width: 230px;
-    right: 0;
-    z-index: 1032;
-    visibility: visible;
-    background-color: #999;
-    overflow-y: visible;
-    border-top: none;
-    text-align: left;
-    border-left: 1px solid #e3e3e3;
-    padding-right: 15px;
-    padding-left: 15px;
-    max-height: none !important;
-    -webkit-transform: translate3d(230px, 0, 0);
-    -moz-transform: translate3d(230px, 0, 0);
-    -o-transform: translate3d(230px, 0, 0);
-    -ms-transform: translate3d(230px, 0, 0);
-    transform: translate3d(230px, 0, 0);
-    -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1); }
-
   .navbar-collapse ul {
     position: relative;
     z-index: 3;
@@ -3436,7 +3406,8 @@ body {
 .logo {
   border: 2px solid #14142c;
   background: #14142c;
-  /*position: absolute;*/ }
+  position: absolute;
+  z-index: 99999; }
 
 .banner-text {
   margin-top: 10rem;
@@ -3568,7 +3539,8 @@ body {
   border-radius: 2px;
   height: 36px;
   width: 180px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  padding: 10px; }
 
 .contact-form.button {
   background: #00c1ff;
@@ -3577,7 +3549,8 @@ body {
   border-radius: 2px;
   height: 36px;
   width: 180px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  padding: 0px; }
 
 .contact-form.button:hover {
   background: #fff;
@@ -3595,12 +3568,17 @@ body {
 .login-row {
   padding: 10px; }
 
+.input-row {
+  padding: 10px;
+  margin-top: 20px; }
+
 .login-input {
   border: 1px solid #00c1ff;
   width: 100%;
   height: 30px;
-  font-size: 26px;
-  background: #f5f5f5; }
+  font-size: 16px;
+  background: #f5f5f5;
+  padding: 10px; }
 
 .login-input::-webkit-input-placeholder {
   color: black !important;
@@ -3648,11 +3626,12 @@ body {
   background: #070f34; }
 
 .sample-info-text {
-  margin-top: 20px;
-  margin-bottom: 20px; }
+  margin-top: 30px;
+  margin-bottom: 30px; }
 
 .class-select {
-  text-align: right; }
+  text-align: right;
+  margin-top: 24px; }
   .class-select a:hover {
     color: #00c1ff; }
   .class-select nav > ul > li.active {
@@ -3664,7 +3643,7 @@ body {
   padding: 1px 12px;
   border-right: 4px solid #00c1ff;
   word-wrap: break-word;
-  box-shadow: 0px 3px 10px #e4e1e1;
+  box-shadow: 0px 3px 20px #8b959ab3;
   text-align: right;
   margin-top: 10px; }
 
@@ -3700,9 +3679,9 @@ label.list-group-radio:hover, label.list-group-radio:active {
   top: 10px; }
 
 .product {
-  box-shadow: 0px 3px 10px #e4e1e1;
   margin-top: 10px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  border: 1px solid #eef1f3; }
 
 .product-container {
   background: #030c41;
@@ -3729,14 +3708,15 @@ label.list-group-radio:hover, label.list-group-radio:active {
   padding: 10px;
   border-right: 4px solid #00c1ff;
   word-wrap: break-word;
-  box-shadow: 0px 3px 10px #e4e1e1;
+  box-shadow: 0px -1px 40px #e4e1e1;
   text-align: right;
   margin-top: 10px; }
 
 .product-title {
   margin-left: 10px;
   margin-right: 10px;
-  font-weight: 600; }
+  font-weight: 600;
+  font-size: 24px; }
 
 .product-cart-content {
   vertical-align: middle; }
@@ -3772,7 +3752,11 @@ label.list-group-radio:hover, label.list-group-radio:active {
 
 .product-detail-title {
   margin-left: 10px;
-  font-weight: 600; }
+  font-weight: 600;
+  font-size: 24px; }
+
+.product-category {
+  margin: 0px; }
 
 hr {
   border: none;
@@ -3829,7 +3813,7 @@ hr {
   outline-offset: -2px; }
 
 .checkbox input[type="checkbox"]:checked + label::after {
-  font-family: 'FontAwesome';
+  font-family: 'Assistant', sans-serif;
   content: "\f00c"; }
 
 .checkbox input[type="checkbox"]:disabled + label {
@@ -4075,13 +4059,13 @@ hr {
   width: auto;
   background-color: #fff;
   word-wrap: break-word;
-  box-shadow: 0px 3px 10px #e4e1e1;
+  border: 1px solid #eef1f3;
   margin-top: 50px;
   margin-bottom: 20px;
   color: #ffffff; }
   .cross-container .cross-container-header {
     background: #030c41;
-    height: 100%; }
+    height: 174px; }
     .cross-container .cross-container-header .cross-image {
       margin-top: -40px;
       margin-bottom: 10px; }
@@ -4175,5 +4159,37 @@ hr {
 @media (max-width: 596px) {
   .btn-offer-date {
     margin-top: 0; } }
+.modal-backdrop {
+  background-color: transparent; }
+
+.modal-backdrop-transparent {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1000; }
+
+.modal-backdrop-blue {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: darkslategrey;
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
+  z-index: 1039; }
+
+.modal-transition {
+  transition: all 0.4s ease; }
+
+.banner-text-h1 {
+  margin-bottom: 20px; }
 
 /*# sourceMappingURL=gaia.css.map */
