--- a/themes/demo/assets/scss/gaia.scss
+++ b/themes/demo/assets/scss/gaia.scss
@@ -67,7 +67,7 @@ h6,
 .content-blog p {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+  font-family: 'Assistant', sans-serif;
 }
 h1 a,
 .h1 a,
@@ -83,7 +83,7 @@ h6 a,
 .h6 a,
 .content-blog p a {
   font-size: inherit;
-  font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+  font-family: 'Assistant', sans-serif;
 }
 
 .content-blog {
@@ -1891,7 +1891,7 @@ input::-webkit-input-placeholder {
 
 .card {
   background: #fff;
-  box-shadow: 0 32px 44px -24px rgba(0, 0, 0, 0.23), 0 20px 25px 0px rgba(0, 0, 0, 0.12), 0 15px 10px -10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px -2px 23px -1px rgba(0, 0, 0, 0.23), 0 0px 1px 0px rgba(0, 0, 0, 0.12), 0 0px 40px -40px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   margin-bottom: 30px;
   -webkit-transition: all 370ms cubic-bezier(0.34, 1.61, 0.7, 1);
@@ -1905,7 +1905,7 @@ input::-webkit-input-placeholder {
   z-index: 3;
 }
 .card-client {
-  box-shadow:0 32px 44px -24px rgba(0, 0, 0, 0.23), 0 -6px 25px 0px rgba(0, 0, 0, 0.12), 0 0px 7px -17px rgba(0, 0, 0, 0.2);
+  //box-shadow:0 32px 44px -24px rgba(0, 0, 0, 0.23), 0 -6px 25px 0px rgba(0, 0, 0, 0.12), 0 0px 7px -17px rgba(0, 0, 0, 0.2);
   background: #fff;
   border-radius: 2px !important;
   margin-bottom: 30px;
@@ -1921,7 +1921,7 @@ input::-webkit-input-placeholder {
   -o-transform: scale(1.03);
   -ms-transform: scale(1.03);
   transform: scale(1.03);
-  box-shadow: 0 26px 50px -10px rgba(0, 0, 0, 0.38), 0 10px 20px 0px rgba(0, 0, 0, 0.2), 0 15px 10px -10px rgba(0, 0, 0, 0.2);
+  //box-shadow: 0 26px 50px -10px rgba(0, 0, 0, 0.38), 0 10px 20px 0px rgba(0, 0, 0, 0.2), 0 15px 10px -10px rgba(0, 0, 0, 0.2);
 }
 .card .subtitle-black {
   color: #141414;
@@ -3469,32 +3469,32 @@ body {
   }
 
   .navbar-collapse {
-    position: fixed;
-    display: block;
-    top: 0;
-    height: 100vh;
-    width: 230px;
-    right: 0;
-    z-index: 1032;
-    visibility: visible;
-    background-color: #999;
-    overflow-y: visible;
-    border-top: none;
-    text-align: left;
-    border-left: 1px solid #e3e3e3;
-    padding-right: 15px;
-    padding-left: 15px;
-    max-height: none !important;
-    -webkit-transform: translate3d(230px, 0, 0);
-    -moz-transform: translate3d(230px, 0, 0);
-    -o-transform: translate3d(230px, 0, 0);
-    -ms-transform: translate3d(230px, 0, 0);
-    transform: translate3d(230px, 0, 0);
-    -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-    transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    //position: fixed;
+    //display: block;
+    //top: 0;
+    //height: 100vh;
+    //width: 230px;
+    //right: 0;
+    //z-index: 1032;
+    //visibility: visible;
+    //background-color: #999;
+    //overflow-y: visible;
+    //border-top: none;
+    //text-align: left;
+    //border-left: 1px solid #e3e3e3;
+    //padding-right: 15px;
+    //padding-left: 15px;
+    //max-height: none !important;
+    //-webkit-transform: translate3d(230px, 0, 0);
+    //-moz-transform: translate3d(230px, 0, 0);
+    //-o-transform: translate3d(230px, 0, 0);
+    //-ms-transform: translate3d(230px, 0, 0);
+    //transform: translate3d(230px, 0, 0);
+    //-webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    //-moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    //-o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    //-ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+    //transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   }
   .navbar-collapse ul {
     position: relative;
@@ -3788,7 +3788,8 @@ body {
 .logo{
   border:2px solid #14142c;
   background: #14142c;
-  /*position: absolute;*/
+  position: absolute;
+  z-index: 99999;
 
 }
 .banner-text{
@@ -3923,6 +3924,7 @@ body {
   height: 36px;
   width: 180px;
   margin-bottom: 10px;
+  padding: 10px;
 }
 .contact-form.button{
   background: #00c1ff;
@@ -3932,6 +3934,7 @@ body {
   height: 36px;
   width: 180px;
   margin-bottom: 10px;
+  padding: 0px;
 }
 .contact-form.button:hover{
   background: #fff;
@@ -3950,12 +3953,17 @@ body {
 .login-row{
   padding: 10px;
 }
+.input-row{
+  padding: 10px;
+  margin-top:20px;
+}
 .login-input{
   border: 1px solid #00c1ff;
   width: 100%;
   height: 30px;
-  font-size: 26px;
+  font-size: 16px;
   background: #f5f5f5;
+  padding:10px;
 
 }
 .login-input::-webkit-input-placeholder {
@@ -4006,11 +4014,12 @@ body {
   background: #070f34;
 }
 .sample-info-text{
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 .class-select{
   text-align: right;
+  margin-top: 24px;
   a:hover{
     color: #00c1ff;
   }
@@ -4024,7 +4033,7 @@ body {
   padding: 1px 12px;
   border-right: 4px solid #00c1ff;
   word-wrap: break-word;
-  box-shadow: 0px 3px 10px #e4e1e1;
+  box-shadow: 0px 3px 20px #8b959ab3;
   text-align: right;
   margin-top:10px;
 }
@@ -4060,9 +4069,10 @@ label.list-group-radio:hover, label.list-group-radio:active {
   top: 10px;
 }
 .product{
-  box-shadow: 0px 3px 10px #e4e1e1;
+  //box-shadow: 0px -2px 16px -1px rgba(0, 0, 0, 0.23), 0 0px 1px 0px rgba(0, 0, 0, 0.12), 0 0px 40px -40px rgba(0, 0, 0, 0.2);
   margin-top: 10px;
   margin-bottom: 10px;
+  border: 1px solid #eef1f3;
 }
 .product-container{
   background: #030c41;
@@ -4094,7 +4104,7 @@ label.list-group-radio:hover, label.list-group-radio:active {
   padding: 10px;
   border-right: 4px solid #00c1ff;
   word-wrap: break-word;
-  box-shadow: 0px 3px 10px #e4e1e1;
+  box-shadow: 0px -1px 40px #e4e1e1;
   text-align: right;
   margin-top:10px;
 }
@@ -4102,6 +4112,7 @@ label.list-group-radio:hover, label.list-group-radio:active {
   margin-left: 10px;
   margin-right: 10px;
   font-weight: 600;
+  font-size: 24px;
 }
 .product-cart-content{
   vertical-align: middle;
@@ -4139,6 +4150,10 @@ label.list-group-radio:hover, label.list-group-radio:active {
 .product-detail-title{
   margin-left: 10px;
   font-weight: 600;
+  font-size: 24px;
+}
+.product-category{
+  margin: 0px;
 }
 hr {
   border: none;
@@ -4187,7 +4202,7 @@ hr {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px; }
 .checkbox input[type="checkbox"]:checked + label::after {
-  font-family: 'FontAwesome';
+  font-family: 'Assistant', sans-serif;
   content: "\f00c"; }
 .checkbox input[type="checkbox"]:disabled + label {
   opacity: 0.65; }
@@ -4408,13 +4423,13 @@ hr {
   width: auto;
   background-color: #fff;
   word-wrap: break-word;
-  box-shadow: 0px 3px 10px #e4e1e1;
+  border: 1px solid #eef1f3;
   margin-top:50px;
   margin-bottom: 20px;
   color:#ffffff;
   .cross-container-header{
     background: #030c41;
-    height: 100%;
+    height: 174px;
     .cross-image{
       margin-top: -40px;
       margin-bottom: 10px;
@@ -4532,4 +4547,37 @@ hr {
   .btn-offer-date {
     margin-top: 0;
   }
+}
+.modal-backdrop {
+  background-color: transparent;
+}
+.modal-backdrop-transparent {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1000;
+}
+.modal-backdrop-blue {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: darkslategrey;
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
+  z-index: 1039;
+}
+.modal-transition {
+  transition: all 0.4s ease;
+}
+.banner-text-h1{
+  margin-bottom: 20px;
 }
