--- a/themes/demo/layouts/default.htm
+++ b/themes/demo/layouts/default.htm
@@ -10,16 +10,13 @@ description = "Default layout"
         <meta name="author" content="OctoberCMS">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="generator" content="OctoberCMS">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-        <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
         <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
         <link href="{{ 'assets/css/bootstrap.css'|theme }}" rel="stylesheet"/>
 
         <link href="{{ 'assets/css/gaia.css'|theme }}" rel="stylesheet"/>
 
-        <link href="../assets/css/gaia.css" rel="stylesheet"/>
         <!--     Fonts and icons     -->
         <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
@@ -63,6 +60,9 @@ description = "Default layout"
 
         <script src="{{ 'assets/javascript/jquery.rating.js'|theme }}"></script>
         <script src="{{ 'assets/javascript/bootstrap-number-input.js'|theme }}"></script>
+        <script src="{{ 'assets/javascript/jquery.elevateZoom-3.0.8.min.js'|theme }}"></script>
+        <script src="{{ 'assets/javascript/jquery.elevatezoom.js'|theme }}"></script>
+
 
 
         {% framework extras %}
@@ -118,8 +118,25 @@ description = "Default layout"
                 upClass: 'success'
             });
 
-
+            $('[id$="-button"]').on("click", function (e) {
+                var color = $(this).attr('data-color');
+                var colorBackdrop = 'modal-backdrop-blue';
+//                 alert(color);
+                $('#modal-backdrop').addClass(colorBackdrop);
+            });
+            $('.btn-close, .modal').on("click", function (e) {
+                var color = $('.in').attr('data-color');
+                var activeBackdrop = 'modal-backdrop-blue';
+                $('#modal-backdrop').removeClass(activeBackdrop);
+            });
+            $("#zoom_01").elevateZoom({
+                zoomType				: "lens",
+                lensShape : "round",
+                lensSize    : 200
+            });
         </script>
+
+
 
     </body>
 </html>
