--- a/themes/demo/partials/site/header.htm
+++ b/themes/demo/partials/site/header.htm
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-default "  style="height: 70px;">
+<nav class="navbar navbar-default" style="    height: 70px;">
     <!-- if you want to keep the navbar hidden you can add this class to the navbar "navbar-burger"-->
     <div class="container">
         <div class="navbar-header">
@@ -13,7 +13,7 @@
 
         </div>
         <div class="collapse navbar-collapse" id="example">
-            <div class="nav navbar-nav navbar-right ">
+            <div class="nav navbar-nav navbar-right">
                 <a href="/">
                     <div class="logo">
                         <img src="/themes/demo/assets/images/logo.png">
@@ -22,7 +22,7 @@
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a data-toggle="modal" data-target="#contact-us"> צור קשר </a>
+                    <a data-toggle="modal"  data-target="#contact-us" id="blue-button" data-color="blue"> צור קשר </a>
                 </li>
                 <li>
                     <a href="/shop-products"> חנות מוצרים </a>
@@ -47,7 +47,7 @@
                     <a href="#"><i class="fa fa-twitter"></i> </a>
                 </li>
                 <li>
-                    <a data-toggle="modal" data-target="#register">הרשמה </a>
+                    <a data-toggle="modal" data-target="#register"  id="blue-button" data-color="blue">הרשמה </a>
                 </li>
                 <li>
                     <a href="#">/</a>
